--- a/src/style.css
+++ b/src/style.css
@@ -1,75 +1,75 @@
-.login {
-  background: url(http://subirimagen.me/uploads/20180919160048.png) no-repeat;
-  background-size: cover;
+/* Bordered form */
+form {
+    border: 3px solid #f1f1f1;
 }
-#formLogin {
-  border: 3px solid #f1f1f1;
-  width: 30%;
-  margin: 0% 35%;
+
+/* Full-width inputs */
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
 }
-input[type="email_login"],
-input[type="password_login"] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
+
+/* Set a style for all buttons */
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
 }
-.buttonLogin {
-  background-color: #4caf50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-}
+
+/* Add a hover effect for buttons */
 button:hover {
-  opacity: 0.8;
+    opacity: 0.8;
 }
-#LoginFace {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
+
+/* Extra style for the cancel button (red) */
+.cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
 }
-#LoginGmail {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
-}
+
+/* Center the avatar image inside this container */
 .imgcontainer {
-  text-align: center;
-  margin: 24px 0 12px 0;
+    text-align: center;
+    margin: 24px 0 12px 0;
 }
+
+/* Avatar image */
 img.avatar {
-  width: 40%;
-  border-radius: 50%;
+    width: 40%;
+    border-radius: 50%;
 }
+
+/* Add padding to containers */
 .container {
-  padding: 16px;
+    padding: 16px;
 }
+
+/* The "Forgot password" text */
 span.psw {
-  float: right;
-  padding-top: 16px;
+    float: right;
+    padding-top: 16px;
 }
+
 /* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 750px) {
-  #formLogin {
-    width: 60%;
-    margin: 0% 20%;
-  }
+@media screen and (max-width: 300px) {
+    span.psw {
+        display: block;
+        float: none;
+    }
+    .cancelbtn {
+        width: 100%;
+    }
 }
-@media screen and (max-width: 450px) {
-  span.psw {
-    display: block;
-    float: none;
-  }
-  .cancelbtn {
-    width: 100%;
-  }
-  #formLogin {
-    width: 100%;
-    margin: 0% 0%;
-  }
+
+.hidden{
+  display: none
 }
