--- a/rediseño/style.css
+++ b/rediseño/style.css
@@ -15,10 +15,18 @@
     height: 400px;
 overflow:auto;
 }
-
+.cuadro{
+    background: rgba(179, 179, 179, 0.7);
+    width:100% ;
+    height:320px ;
+    overflow:scroll;
+}
+.ol{
+    margin-top: 70px
+}
 td{
     padding: 4px;
-    border: 1px solid  rgba(241, 241, 241, 0.7);;
+    border: 1px solid  rgba(241, 241, 241, 0.7);
 }
 .color{
     background: rgb(255, 80, 0);
