--- a/rediseño/style.css
+++ b/rediseño/style.css
@@ -16,8 +16,8 @@
 overflow:auto;
 }
 .cuadro{
-    background: rgba(179, 179, 179, 0.7);
-    width:100% ;
+    background: rgba(194, 193, 193, 0.7);
+    width:100wh ;
     height:320px ;
     overflow:scroll;
 }
